﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $

2.11.7.0 (not yet released)

2.11.6.0 (not yet released)
- bug #1903724 [interface] Displaying of very large queries in error message 
- bug #1905711 [compatibility] Functions deprecated in PHP 5.3: is_a() and
  get_magic_quotes_gpc(), thanks to Dmitry N. Shilnikov - yrtimd
- bug [lang] catalan wrong accented characters
- bug #1893034 [Export] SET NAMES for importing with command-line client 
+ [lang] Russian update, thanks to Victor Volkov
- bug #1910485 [core] Unsetting the whitelist during the loop,
  thanks to Jeroen Vrijkorte - jv_map
- bug #1906980 [Export] Import of VIEWs fails if temp table exists,
  thanks to Falk Nisius - klaf
- bug #1812763 [Copy] Table copy when server is in ANSI_QUOTES sql_mode 
  thanks to Tony Marston - tonymarston 
- bug #1918531 [compatibility] Navigation isn't w3.org valid 
  thanks to Michael Keck - mkkeck 
- bug #1926357 [data] BIT defaults displayed incorrectly
- patch #1930057 [auth] colon in password prevents HTTP login on CGI/IIS, 
  thanks to Jürgen Wind - windkiel
- patch #1929553 [lang] Don't output BOM character in Swedish language file,
  thanks to Samuel L. B. - samuellb
- patch #1895796 [lang] Typo in Japanese lang files,
  thanks to tyman - acoustype
- bug #1935652 [auth] Access denied (show warning about mcrypt on login page)
- bug #1906983 [export] Reimport of FUNCTION fails
- bug #1919808 [operations] Renaming a database fails to handle functions 
- bug #1934401 [core] Cannot force a language
- bug #1944077 [core] Config file containing a BOM,
  thanks to Gaetano Giunta - ggiunta
- bug #1947189 [scripts] Missing </head> in scripts/signon.php,
  thanks to Dolf Schimmel
+ [lang] Romanian update, thanks to Sergiu Bivol - sbivol

2.11.5.2 (2008-04-22)
- PMASA-2008-3 [security] File disclosure 

2.11.5.1 (2008-03-29)