@@ -6,6 +6,7 @@ $Id$
 $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $
 
 2.11.7.0 (not yet released)
+- bug #1908719 [interface] New field cannot be auto-increment and primary key 
 
 2.11.6.0 (not yet released)
 - bug #1903724 [interface] Displaying of very large queries in error message 
